--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
     },
     "devDependencies": {
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "browser-sync": "^2.27.10",
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "laravel-mix": "^6.0.47",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.52.2",
+        "sass-loader": "^12.6.0",
+        "vue-loader": "^16.8.3"
     },
     "dependencies": {
+        "dotenv": "^16.0.1",
         "vue": "^3.2.36",
         "vue-axios": "^3.4.1",
         "vue-router": "^4.0.15"
