--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "stephenjude/default-model-sorting": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
