--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "maatwebsite/excel": "^3.1",
+        "staudenmeir/eloquent-has-many-deep": "^1.12",
         "stephenjude/default-model-sorting": "^2.0"
     },
     "require-dev": {
